--- a/localisation/simp_chinese/replace/replaced_from_designer_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_designer_l_simp_chinese.yml
@@ -4,7 +4,6 @@
  NAME_THEME_ANIMALS: "动物"
  NAME_THEME_HISTORICAL_CARRIERS: "史实类航空母舰"
  NAME_THEME_HISTORICAL_HELICOPTER_CARRIERS: "史实类直升机航空母舰"
- NAME_THEME_HISTORICAL_AMPHIBIOUS_SHIPS: "历史上的两栖登陆舰"
  NAME_THEME_HISTORICAL_CRUISER: "史实类巡洋舰"
  NAME_THEME_HISTORICAL_FRIGATE: "史实类护卫舰"
  NAME_THEME_HISTORICAL_CORVETTE: "史实类轻护卫舰"
@@ -79,3 +78,4 @@
  NAME_THEME_MODERN_ATTACK_SUBMARINES: "现代攻击潜艇"
  NAME_THEME_MODERN_HELICOPTER_CARRIERS: "现代直升机航空母舰"
  NAME_THEME_MODERN_SUBMARINES: "现代潜艇"
+ NAME_THEME_HISTORICAL_AMPHIBIOUS_SHIPS: "史实两栖登陆舰"
