--- a/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
@@ -3,9 +3,9 @@
  MODULE_ALLOW_ROLE_BUT_OTHER_FORBID: "§G允许§!$ROLE|H$定位，但$FORBIDDING_MODULE|H$模块§R禁用§!了这个定位"
  MODULE_FORBID_ROLE: "§R禁止§!$ROLE|H$定位"
  MODULE_ALLOWED_ROLE_IS_FORBIDDEN_BY_ANOTHER_MODULE: "定位$ROLE|H$是£trigger_yes£按模块$ALLOWING_MODULE|H$但是£trigger_no£按模块$FORBIDDING_MODULE|H$\n\n"
- DESIGNER_CHASSIS_BASE:0 "科技："
- DESIGNER_FROM_MODULES:0 "模块："
- DESIGNER_UNSAVED_CHANGES:0 "未保存的变动："
+ DESIGNER_CHASSIS_BASE: "科技："
+ DESIGNER_FROM_MODULES: "模块："
+ DESIGNER_UNSAVED_CHANGES: "未保存的变动："
  EQ_MOD_SLOT_main_armament_slot_TITLE: "主要武器"
  EQ_MOD_SLOT_arty_main_armament_slot_TITLE: "火炮主要武器"
  EQ_MOD_SLOT_turret_type_slot_TITLE: "炮塔"
@@ -188,7 +188,7 @@
  art_small_rocket_gen5: "未来轻型火箭炮"
  art_small_rocket_gen5_desc: "这种自行火箭炮具有最好的小口径火箭弹，搭配在集中区域准确进行火箭袭击所需的最佳计算技术。它会压制并摧毁你决定发射它的网格上的一切。"
  art_med_rocket_gen1: "冷战早期中型火箭炮"
- art_med_rocket_gen1_desc: "早期的200-300毫米火箭通常从改进的100-200毫米平台发射，管子较少，但总体上具有更好的爆炸和破片效果。"
+ art_med_rocket_gen1_desc: "早期的200-300毫米火箭通常从改进的100-200毫米平台发射，即便发射管较少，但总体上具有更好的爆炸和破片效果。"
  art_med_rocket_gen2: "冷战中型火箭炮"
  art_med_rocket_gen2_desc: "中型火箭发射器系统的开发提高了该平台的整体效率及其性价比。凭借改进的射程和与更多种类的弹头和火箭的兼容性，它们非常适合各种火力任务。用于在大范围内与目标交战。"
  art_med_rocket_gen3: "现代中型火箭炮"
@@ -196,9 +196,9 @@
  art_med_rocket_gen4: "先进中型火箭炮"
  art_med_rocket_gen4_desc: "更大的中型自行火箭炮系统，增加发射管的数量，以及更大的弹头，在保持效率的同时造成尽可能多的伤害。"
  art_med_rocket_gen5: "未来中型火箭炮"
- art_med_rocket_gen5_desc: "中型自行火箭炮可以同时发射多枚不同的火箭。这种发射器准备重新装填的速度比平时快得多，因此能够保持持续的火力，而无需将多个平台一起部署。"
+ art_med_rocket_gen5_desc: "中型自行火箭炮可以同时发射多枚不同的火箭。这些发射器准备重新装填的速度比平时快得多，因此能够保持持续的火力，而无需将多个平台一起部署。"
  art_big_rocket_gen1: "冷战早期重型火箭炮"
- art_big_rocket_gen1_desc: "在第二次世界大战中，300毫米火箭弹是发射平台上最重的火箭，主要用于摧毁最重的防御工事，并破坏城镇的基础设施和敌军的临时阵地。这种火箭的重量相当于小型炸弹，人们认为它们能够完全摧毁建筑物，同时发射相对较快。它们的主要缺点是射程短，差不多4公里。"
+ art_big_rocket_gen1_desc: "在第二次世界大战中，300毫米火箭弹是发射平台上最重的火箭，主要用于摧毁最重的防御工事，并破坏城镇的基础设施和敌军的临时阵地。这种火箭的重量相当于小型炸弹，人们认为它们能够完全摧毁建筑物，同时发射相对较快。它们的主要缺点是射程短，差不多仅4公里。"
  art_big_rocket_gen2: "冷战重型火箭炮"
  art_big_rocket_gen2_desc: "尽管数量很少，但重型火箭发射系统足够强大以抵消其射击误差。这种较重的火箭通过为其制造的专用发射平台，可以比二战中的旧火箭在更远的距离上使用。它们的弹头含有大量的炸药和碎片，极其致命。"
  art_big_rocket_gen3: "现代重型火箭炮"
@@ -228,14 +228,14 @@
  chassis_tank_gen4: "未来坦克底盘"
  chassis_tank_gen4_desc: "改进的坦克底盘必须准备好在战场上适应多种任务，无论是升级套件还是完全不同的炮塔，在这种情况下，坦克的炮塔被火炮武器系统取代。这当然是一项昂贵的计划，但完成后，火炮系统保留了未来坦克底盘的所有优势，使其成为在前线使用的更安全的平台。"
  chassis_afv_gen0: "冷战装甲战车底盘"
- chassis_afv_gen0_desc: "与坦克底盘相比，装甲战车底盘更轻，但具有高度的机动性，仍然能够用于安装大口径火炮系统。这种早期的AFV底盘主要以敞篷方式使用，用于运送乘员的空间通常是其上的火炮底座， 而对于火箭系统，发射器放置在底盘的后端，前部是乘员舱。"
+ chassis_afv_gen0_desc: "与坦克底盘相比，装甲战车底盘更轻，但具有高度的机动性，仍然能够用于安装大口径火炮系统。这种早期的装甲战车底盘主要以敞篷方式使用，用于运送乘员的空间通常是其上的火炮底座， 而对于火箭系统，发射器放置在底盘的后端，前部是乘员舱。"
  chassis_afv_gen1: "冷战装甲战车底盘"
  chassis_afv_gen1_desc: "冷战时期的装甲战车有能力安装更大的火炮，并为额外的装甲或设备预留更多的重量，因此它们的底盘可以更好地用于简易火炮或火箭系统。这些战车也可以安装较小尺寸的炮塔，为乘员提供了更高的生存能力，并且也更容易射击。"
  chassis_afv_gen2: "现代装甲战车底盘"
- chassis_afv_gen2_desc: "冷战结束后，装甲战车的角色发生了变化，他们的底盘也随之发生了变化。这种底盘旨在更耐用，长期可持续，大大提高载重，以便车辆使用更广泛的武器。这使其火炮和多管火箭炮变体也得到了极大的改进。"
+ chassis_afv_gen2_desc: "冷战结束后，装甲战车的角色发生了变化，他们的底盘也随之发生了变化。这些底盘旨在更耐用，长期可持续，大大提高载重，以便车辆使用更广泛的武器。这使其火炮和多管火箭炮变体也得到了极大的改进。"
  chassis_afv_gen3: "改良装甲战车底盘"
  chassis_afv_gen4: "未来装甲战车底盘"
- chassis_afv_gen3_desc: "先进装甲战车能够部署多种类型的炮塔和武器，因此合乎逻辑的下一步是使它们适应特定的角色。这种底盘非常耐用，并具有改进装甲战车的所有优点，因此它已成为机械化部队的骨干。"
+ chassis_afv_gen3_desc: "改进的装甲战车能够部署多种类型的炮塔和武器，因此合乎逻辑的下一步是使它们适应特定的角色。这种底盘非常耐用，并具有改进装甲战车的所有优点，因此它已成为机械化部队的骨干。"
  art_battlestation_gen1: "早期火炮火控系统"
  art_battlestation_gen1_desc: "无线电和基本弹道计算机"
  art_battlestation_gen2: "冷战火炮火控系统"
@@ -885,13 +885,13 @@
  spaa_chassis_truck_gen2: "现代卡车底盘"
  spaa_chassis_truck_gen2_desc: "专为用作不同武器系统平台而生产的重型卡车越来越常见。它们经过加强，可以适应现代军事行动的恶劣环境。"
  spaa_chassis_truck_gen3: "改良卡车底盘"
- spaa_chassis_truck_gen3_desc: "重型装甲卡车是作为高度耐用和高度机动的武器系统而生产的，是大多数后勤和炮兵部队的支柱。这种类型的底盘能在小型武器火力和破片爆炸的攻击中幸存，并配有特定的重型轮胎，有助于提高战场生存能力。还可以自行携带一些弹药。"
+ spaa_chassis_truck_gen3_desc: "为用作高度耐用和高机动性武器系统而生产的重型装甲卡车是大多数后勤和炮兵团的支柱。这种类型的底盘可以在小型武器火力和碎片爆炸中幸存下来，并且具有特定的重型轮胎，有助于在战场上生存。可以为自己携带一些弹药。"
  spaa_chassis_truck_gen4: "未来卡车底盘"
  spaa_chassis_truck_gen4_desc: "专为未来的火炮系统设计的卡车底盘经过大量修改，使其成为各种火炮系统的完美平台，具有可替换的组件，使其成为真正的多用途平台。"
  spaa_chassis_tank_gen0: "冷战早期坦克底盘"
  spaa_chassis_tank_gen0_desc: "早期的坦克底盘可能不是现在技术上最令人影响深刻的底盘，但它为各种简易火炮系统提供了一个很好的平台，通常火炮安装在旧式坦克拆卸下来的炮塔上，为乘员提供一定的保护，并使车辆具有跨地形能力，而且与现代坦克底盘相比，生产无需太多资源。"
  spaa_chassis_tank_gen1: "冷战坦克底盘"
- spaa_chassis_tank_gen1_desc: "苏联冷战时期的过时坦克被广泛改装用于不同任务，从而扩展了底盘的使用范围。一些国家采用了这种方法，将冷战时期的过时坦克改装成火炮系统平台，这种底盘确实非常适合穿越恶劣地形，还可以在封闭、更安全的炮塔中安装更重的火炮。"
+ spaa_chassis_tank_gen1_desc: "苏联冷战时期的过时坦克被广泛适用于不同的任务，这扩展了其底盘的使用。一些国家采用了这种方法，将他们过时的冷战坦克变成了火炮系统的平台，这种底盘非常适合穿越恶劣的地形，还可以将更重的火炮安装在封闭的、更安全的炮塔中。"
  spaa_chassis_tank_gen2: "现代坦克底盘"
  spaa_chassis_tank_gen2_desc: "新型坦克必须具有广泛的适应性，以便将来进行改装或升级。这意味着，它们要能够适应各种不同的平台，该平台适用于专门改装为火炮平台，保留了真正坦克的机动性和装甲，以前用于储存坦克弹药的空间可以用来储存火炮本身的弹药。"
  spaa_chassis_tank_gen3: "改良坦克底盘"
@@ -899,14 +899,14 @@
  spaa_chassis_tank_gen4: "未来坦克底盘"
  spaa_chassis_tank_gen4_desc: "改进型坦克底盘必须随时准备在战场上执行多种任务，无论是使用升级套件还是完全不同的炮塔，在这种情况下，坦克的炮塔将被火炮武器系统取代。这当然是一项高成本的任务，但完成后，火炮系统将保留未来坦克底盘的所有优势，使其成为在前线使用的更安全的平台。"
  spaa_chassis_afv_gen0: "冷战早期装甲战车底盘"
- spaa_chassis_afv_gen0_desc: "与坦克底盘相比，装甲战车底盘更轻，但具有很强的机动性，仍可用于安装大口径火炮系统，这种早期的装甲战车底盘大多采用敞篷方式，用于运送乘员的空间通常是火炮的底座，而如果是火箭系统，发射器则放置在底盘的后端，前端是乘员舱。"
+ spaa_chassis_afv_gen0_desc: "与坦克底盘相比，装甲战车底盘更轻，但具有高度的机动性，仍然能够用于安装大口径火炮系统。这种早期的装甲战车底盘主要以敞篷方式使用，用于运送乘员的空间通常是其上的火炮底座， 而对于火箭系统，发射器放置在底盘的后端，前部是乘员舱。"
  spaa_chassis_afv_gen1: "冷战装甲战车底盘"
- spaa_chassis_afv_gen1_desc: "冷战时期的装甲战车更有能力安装更大的火炮，并支持更重的附加装甲或设备，因此其底盘更适合用于简易火炮或火箭系统。这些车辆可以采用较小尺寸的炮塔以取代敞篷式，从而提高了乘员的生存能力，也更容易在开火后转移。"
+ spaa_chassis_afv_gen1_desc: "冷战时期的装甲战车有能力安装更大的火炮，并为额外的装甲或设备预留更多的重量，因此它们的底盘可以更好地用于简易火炮或火箭系统。这些战车也可以安装较小尺寸的炮塔，为乘员提供了更高的生存能力，并且也更容易射击。"
  spaa_chassis_afv_gen2: "现代装甲战车底盘"
- spaa_chassis_afv_gen2_desc: "冷战结束后，装甲战车的角色发生了变化，他们的底盘也随之发生了变化。这种底盘旨在更耐用，长期可持续，大大提高载重，以便车辆使用更广泛的武器。这使其火炮和多管火箭炮变体也得到了极大的改进。"
+ spaa_chassis_afv_gen2_desc: "冷战结束后，装甲战车的角色发生了变化，他们的底盘也随之发生了变化。这些底盘旨在更耐用，长期可持续，大大提高载重，以便车辆使用更广泛的武器。这使其火炮和多管火箭炮变体也得到了极大的改进。"
  spaa_chassis_afv_gen3: "改良装甲战车底盘"
  spaa_chassis_afv_gen4: "未来装甲战车底盘"
- spaa_chassis_afv_gen3_desc: "先进装甲战车能够部署多种类型的炮塔和武器，因此合乎逻辑的下一步是使它们适应特定的角色。这种底盘非常耐用，并具有改进装甲战车的所有优点，因此它已成为机械化部队的骨干。"
+ spaa_chassis_afv_gen3_desc: "改进的装甲战车能够部署多种类型的炮塔和武器，因此合乎逻辑的下一步是使它们适应特定的角色。这种底盘非常耐用，并具有改进装甲战车的所有优点，因此它已成为机械化部队的骨干。"
  light_tank_hull_0: "第1代轻型坦克车体"
  light_tank_hull_0_desc: ""
  light_tank_hull_1: "第2代轻型坦克车体"
@@ -1110,3 +1110,5 @@
  chassis_tracked_afv_gen4_desc: "这是一种对未来战场的愿景，虽然使用这个模块后生产成本可能会上升，但在防御、突破和装甲是无与伦比的。"
  chassis_light_tank_gen4_desc: "预测未来战争的需求，这个底盘结合了最新的防护技术，确保它在防御和突破方面仍然是一个强大的选择，而不会失去相对于主战坦克的速度优势。"
  ITA_tank_diesel_engine_gen5: "依维科 Vector 12V 1600 hp"
+ chassis_afv_gen4_desc: "高级的装甲战车能够配备多种类型的炮塔和多种类型的武器，因此合乎逻辑的下一步就是使它们适应特定的火炮和多管火箭炮角色，这种底盘非常耐用，并具有改进型装甲战车的所有优点，因此它已成为机械化部队的骨干。"
+ spaa_chassis_afv_gen4_desc: "高级的装甲战车能够配备多种类型的炮塔和多种类型的武器，因此合乎逻辑的下一步就是使它们适应特定的火炮和多管火箭炮角色，这种底盘非常耐用，并具有改进型装甲战车的所有优点，因此它已成为机械化部队的骨干。"
