--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -2801,11 +2801,11 @@
  SOV_OLV6: "泽尼特-2"
  SOV_OLV7: "联盟-弗雷盖特"
  SOV_OLV8: "安加拉 1.2-PP"
- SOV_GNSS1: "GLONASS Block I"
- SOV_GNSS2: "GLONASS Block IIa"
- SOV_GNSS3: "GLONASS Block IIv"
- SOV_GNSS4: "GLONASS-M"
- SOV_GNSS5: "GLONASS-K"
+ SOV_GNSS1: "GLONASS I批次"
+ SOV_GNSS2: "GLONASS IIa批次"
+ SOV_GNSS3: "GLONAS IIv批次"
+ SOV_GNSS4: "GLONASS-M批次"
+ SOV_GNSS5: "GLONASS-K批次"
  SOV_GNSS6: "GLONASS-K2"
  SOV_GNSS7: "GLONASS-V"
  SOV_GNSS8: "GLONASS-KM"
