--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -9934,7 +9934,7 @@
  BSH_infantry_weapons4: "AK-103"
  BSH_infantry_weapons4_desc: "The AK-103 assault rifle is a derivative of the AK-74M chambered for the 7.62x39mm M43 round. Much like the older AKM the 103 can use a variety of sights, including night vision and telescopic. As well as fit a bayonet or grenade launcher. The difference from most AKs is the 103's plastic and cheaper materials."
  BSH_infantry_weapons5: "AK-12"
- BSH_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 hase improved balance and ergonomics making it Russia's most elite assault rifle to date."
+ BSH_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 has improved balance and ergonomics making it Russia's most elite assault rifle to date."
  BSH_infantry_weapons6: "AK-23"
  BSH_infantry_weapons7: "AK-31"
 
@@ -10045,7 +10045,7 @@
  CRM_infantry_weapons4: "AK-103"
  CRM_infantry_weapons4_desc: "The AK-103 assault rifle is a derivative of the AK-74M chambered for the 7.62x39mm M43 round. Much like the older AKM the 103 can use a variety of sights, including night vision and telescopic. As well as fit a bayonet or grenade launcher. The difference from most AKs is the 103's plastic and cheaper materials."
  CRM_infantry_weapons5: "AK-12"
- CRM_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 hase improved balance and ergonomics making it Russia's most elite assault rifle to date."
+ CRM_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 has improved balance and ergonomics making it Russia's most elite assault rifle to date."
  CRM_infantry_weapons6: "AK-23"
  CRM_infantry_weapons7: "AK-31"
 
@@ -10247,7 +10247,7 @@
  TAT_infantry_weapons4: "AK-103"
  TAT_infantry_weapons4_desc: "The AK-103 assault rifle is a derivative of the AK-74M chambered for the 7.62x39mm M43 round. Much like the older AKM the 103 can use a variety of sights, including night vision and telescopic. As well as fit a bayonet or grenade launcher. The difference from most AKs is the 103's plastic and cheaper materials."
  TAT_infantry_weapons5: "AK-12"
- TAT_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 hase improved balance and ergonomics making it Russia's most elite assault rifle to date."
+ TAT_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 has improved balance and ergonomics making it Russia's most elite assault rifle to date."
  TAT_infantry_weapons6: "AK-23"
  TAT_infantry_weapons7: "AK-31"
 
@@ -10542,7 +10542,7 @@
  WAG_infantry_weapons4: "AK-103"
  WAG_infantry_weapons4_desc: "The AK-103 assault rifle is a derivative of the AK-74M chambered for the 7.62x39mm M43 round. Much like the older AKM the 103 can use a variety of sights, including night vision and telescopic. As well as fit a bayonet or grenade launcher. The difference from most AKs is the 103's plastic and cheaper materials."
  WAG_infantry_weapons5: "AK-12"
- WAG_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 hase improved balance and ergonomics making it Russia's most elite assault rifle to date."
+ WAG_infantry_weapons5_desc: "The AK-12 is a new Russian assault rifle. It was developed under the Ratnik future infantrymen programme. Made for specialized forces it will replace the production of the AK-103. The AK-12 has improved balance and ergonomics making it Russia's most elite assault rifle to date."
  WAG_infantry_weapons6: "AK-23"
  WAG_infantry_weapons7: "AK-31"
 
