--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -3407,7 +3407,7 @@
  SOV_infantry_weapons4: "AK-103"
  SOV_infantry_weapons4_desc: "AK-103突击步枪是AK-74M的衍生产品，发射7.62x39mm M43子弹。与老款AKM 一样，103可以使用多种瞄准器，包括夜视和望远镜。还可以安装刺刀或榴弹发射器。与大多数AK的不同之处在于103使用的是塑料和更便宜的材料。"
  SOV_infantry_weapons5: "AK-12"
- SOV_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是大地勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
+ SOV_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
  SOV_infantry_weapons6: "AK-23"
  SOV_infantry_weapons7: "AK-31"
  SOV_Anti_Air_0: "SA-7 箭-2"
@@ -8256,7 +8256,7 @@
  BSH_infantry_weapons4: "AK-103"
  BSH_infantry_weapons4_desc: "AK-103突击步枪是AK-74M的衍生产品，发射7.62x39mm M43子弹。与老款AKM 一样，103可以使用多种瞄准器，包括夜视和望远镜。还可以安装刺刀或榴弹发射器。与大多数AK的不同之处在于103使用的是塑料和更便宜的材料。"
  BSH_infantry_weapons5: "AK-12"
- BSH_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是大地勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
+ BSH_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
  BSH_infantry_weapons6: "AK-23"
  BSH_infantry_weapons7: "AK-31"
  BSH_Anti_Air_0: "SA-7 箭-2"
@@ -8357,7 +8357,7 @@
  CRM_infantry_weapons4: "AK-103"
  CRM_infantry_weapons4_desc: "AK-103突击步枪是AK-74M的衍生产品，发射7.62x39mm M43子弹。与老款AKM 一样，103可以使用多种瞄准器，包括夜视和望远镜。还可以安装刺刀或榴弹发射器。与大多数AK的不同之处在于103使用的是塑料和更便宜的材料。"
  CRM_infantry_weapons5: "AK-12"
- CRM_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是大地勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
+ CRM_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
  CRM_infantry_weapons6: "AK-23"
  CRM_infantry_weapons7: "AK-31"
  CRM_Anti_Air_0: "SA-7 箭-2"
@@ -8537,7 +8537,7 @@
  TAT_infantry_weapons4: "AK-103"
  TAT_infantry_weapons4_desc: "AK-103突击步枪是AK-74M的衍生产品，发射7.62x39mm M43子弹。与老款AKM 一样，103可以使用多种瞄准器，包括夜视和望远镜。还可以安装刺刀或榴弹发射器。与大多数AK的不同之处在于103使用的是塑料和更便宜的材料。"
  TAT_infantry_weapons5: "AK-12"
- TAT_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是大地勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
+ TAT_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
  TAT_infantry_weapons6: "AK-23"
  TAT_infantry_weapons7: "AK-31"
  TAT_Anti_Air_0: "SA-7 箭-2"
@@ -8794,7 +8794,7 @@
  WAG_infantry_weapons4: "AK-103"
  WAG_infantry_weapons4_desc: "AK-103突击步枪是AK-74M的衍生产品，发射7.62x39mm M43子弹。与老款AKM 一样，103可以使用多种瞄准器，包括夜视和望远镜。还可以安装刺刀或榴弹发射器。与大多数AK的不同之处在于103使用的是塑料和更便宜的材料。"
  WAG_infantry_weapons5: "AK-12"
- WAG_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是大地勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
+ WAG_infantry_weapons5_desc: "AK-12是俄罗斯的一款新型突击步枪。它是勇士未来步兵计划下开发的。它专为特种部队制造，将取代AK-103的生产。AK-12的平衡性和人体工程学得到了改进，使其成为俄罗斯迄今为止最精锐的突击步枪。"
  WAG_infantry_weapons6: "AK-23"
  WAG_infantry_weapons7: "AK-31"
  WAG_Anti_Air_0: "SA-7 箭-2"
