--- a/localisation/english/replace/replaced_from_vanilla_diplomacy_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_diplomacy_l_english.yml
@@ -49,8 +49,8 @@
  DIPLOMACY_LEND_LEASE_REASON_TARGET_AT_WAR:0 "To send military aid, @$TAG$$WHO|H$ must be at war."
  DIPLOMACY_LEND_LEASE_REASON_PUPPET:0 "We can always send military aid to our puppets."
  DIPLOMACY_LEND_LEASE_NO_EQUIPMENT_CATEGORY:0 "No equipment for military aid available in this category"
- LEND_LEASE_VEHICLES_BUTTON:0 "§Ship Armored Vehicles§!"
- LEND_LEASE_INFANTRY_BUTTON:0 "§Ship Infantry & Artillery Equipment§!"
+ LEND_LEASE_VEHICLES_BUTTON:0 "§TShip Armored Vehicles§!"
+ LEND_LEASE_INFANTRY_BUTTON:0 "§TShip Infantry & Artillery Equipment§!"
  LEND_LEASE_AIRCRAFT_BUTTON:0 "§TShip Aircraft§!"
  LEND_LEASE_NAVAL_BUTTON:0 "§TShip Convoys§!"
  LEND_LEASE_CURRENT_HEADER:0 "Current military aid:"
