--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -25,7 +25,7 @@
  CUB_invite_puerto_tt: "We will be able to invite [PTR.GetNamewithFlag] into our confederation"
  CUB_invite_haiti_tt: "We will be able to invite [HAI.GetNamewithFlag] into our confederation"
  CUB_invite_dominicana_tt: "We will be able to invite [DOM.GetNamewithFlag] into our confederation"
- 
+ leha_where_are_you: "We will launch an operation to capture Alexei Navalny. The more corrupt Russia is, the better chance we have of taking it over "
  Confederaion_HAI_no_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
  Confederaion_HAI_yes_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
  Confederaion_DOM_loc_no_tt: "§Y[DOM.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
