--- a/localisation/english/replace/replaced_from_operatives_l_english.yml
+++ b/localisation/english/replace/replaced_from_operatives_l_english.yml
@@ -72,7 +72,7 @@
  upgrade_decryption_boost_2: "Machine-Assisted Decryption"
  upgrade_decryption_boost_2_desc: "§WMachines have proven useful in encrypting data already, with machine-assisted encrypted signals proving the most difficult to decipher. Cryptanalysis machines are vital in cracking messages we do not yet know the code for and will be a valuable asset to our deciphering team.§!"
  upgrade_crypto_strength: "Reinforced Encryption"
- upgrade_crypto_strength_desc: "§WSensitive information is vulnerable to external hackers when it is transferred between different departments or individuals. We must ensure that all internal communication is sufficiently encrypted so as to keep it safe from prying eyes."
+ upgrade_crypto_strength_desc: "§WSensitive information is vulnerable to external hackers when it is transferred between different departments or individuals. We must ensure that all internal communication is sufficiently encrypted so as to keep it safe from prying eyes.§!"
  upgrade_crypto_strength_2: "Machine Learning"
  upgrade_crypto_strength_2_desc: "§WAdvancements in artificial intelligence have made the integration of machine learning into cybersecurity systems possible. This will allow our systems to learn from past attacks, prevent future reoccurrences and respond dynamically when attacks occur.§!"
  TRAINING_FACILITIES_ENABLED: "Unlock decisions to build Training Facilities"
