--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -36,7 +36,7 @@
  Confederaion_JAM_loc_yes_tt: "§Y[JAM.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
  Confederaion_PTR_loc_no_tt: "§Y[PTR.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
  Confederaion_PTR_loc_yes_tt: "§Y[PTR.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
- 
+
  blockade_USA_loc_yes_tt: "§Y[USA.GetNamewithFlag]§! takes part in the blockade: §RYES§!"
  blockade_USA_loc_no_tt: "§Y[USA.GetNamewithFlag]§! takes part in the blockade: §GNO§!"
  blockade_CAN_loc_yes_tt: "§Y[CAN.GetNamewithFlag]§! takes part in the blockade: §RYES§!"
@@ -47,7 +47,7 @@
  blockade_HAI_loc_no_tt: "§Y[HAI.GetNamewithFlag]§! takes part in the blockade: §GNO§!"
  blockade_MEX_loc_yes_tt: "§Y[MEX.GetNamewithFlag]§! takes part in the blockade: §RYES§!"
  blockade_MEX_loc_no_tt: "§Y[MEX.GetNamewithFlag]§! takes part in the blockade: §GNO§!"
- 
+
  cub_special_unit_tt: "§YThe §RBlack Wasps§! Brigade will be created§!"
  cub_modern_tt: "§YWe will begin modernizing the military§!"
  cub_military_coop_with_sov_tt: "Russia - since the last century has been our main military partner, we need to revive cooperation with the Russians to confront the US."
@@ -310,7 +310,7 @@
  CUB_form_confederation: "Form the Antillean Confederation"
  CUB_confederation_category: "Antillean Confederation"
  CUB_ask_puerto: "Negotiations on Puerto Rico"
- CUB_confederation_category_desc: "The Antillean Confederacy was §RRamón Emeterio Betanzés's§! fierce idea of the need for §CCaribbean natives§! to unite into a §Yregional entity§! that sought to preserve the sovereignty and well-being of [CUB.GetFlag]Cuba, the [DOM.GetFlag]Dominican Republic, and [PTR.GetFlag]Puerto Rico. Proponents of the idea wanted to §Oliberate the Spanish colonies§! of [CUB.GetFlag]Cuba and [PTR.GetFlag]Puerto Rico, later uniting them with the [DOM.GetFlag]Dominican Republic to create a unified §RSpanish Caribbean nation§!\n\n[Confederaion_HAI_loc]\n[Confederaion_COL_loc]\n[Confederaion_DOM_loc]\n[Confederaion_JAM_loc]\n[Confederaion_PTR_loc]"
+ CUB_confederation_category_desc: "The §BAntillean Confederation§! was §RRamón Emeterio Betanzés's§! fierce idea of the need for §CCaribbean natives§! to unite into a §Yregional entity§! that sought to preserve the sovereignty and well-being of [CUB.GetFlag]Cuba, the [DOM.GetFlag]Dominican Republic, and [PTR.GetFlag]Puerto Rico. Proponents of the idea wanted to §Oliberate the Spanish colonies§! of [CUB.GetFlag]Cuba and [PTR.GetFlag]Puerto Rico, later uniting them with the [DOM.GetFlag]Dominican Republic to create a unified §RSpanish Caribbean nation§!\n\n[Confederaion_HAI_loc]\n[Confederaion_COL_loc]\n[Confederaion_DOM_loc]\n[Confederaion_JAM_loc]\n[Confederaion_PTR_loc]"
  #ideas
  CUB_manf_dev: "Construction Boom"
  CUB_manf_dev_desc: "Because of the successful and competent investment policy, our country has experienced the most real boom in construction. However, we realize that this will not last forever, but we must make the most of it "
