--- a/localisation/french/replace/replaced_from_focus_filter_tag_l_french.yml
+++ b/localisation/french/replace/replaced_from_focus_filter_tag_l_french.yml
@@ -1,4 +1,4 @@
-﻿l_french:
+﻿﻿l_french:
  FOCUS_FILTER_INTERNAL_FACTION: "Factions internes"
  FOCUS_FILTER_INFLUENCE: "Influence"
  FOCUS_FILTER_EXPENDITURE: "Budget"
@@ -29,7 +29,6 @@
  FOCUS_FILTER_KOREAN_PENINSULA: "Péninsule coréenne"
  FOCUS_FILTER_KOREAN_NUCLEAR_ISSUE: "Question nucléaire coréenne"
  FOCUS_FILTER_ENVIRONMENT: "Politiques environnementales"
- #Vanilla
  FOCUS_FILTER_POLITICAL: "Politique"
  FOCUS_FILTER_RESEARCH: "Recherche"
  FOCUS_FILTER_INDUSTRY: "Industrie"
