--- a/localisation/french/replace/replaced_from_game_rules_l_french.yml
+++ b/localisation/french/replace/replaced_from_game_rules_l_french.yml
@@ -1,4 +1,4 @@
-﻿l_french:
+﻿﻿l_french:
  RULE_GROUP_COVERT_ACTIONS: "Actions clandestines"
  RULE_ALLOW_COUPS: "Coups d'État"
  RULE_ALLOW_COUPS_FREE_DESC: "Il est possible de préparer et lancer librement des coups d'États."
@@ -61,3 +61,4 @@
  RULE_ALLOW_LEND_LEASE_SAME_IDEOLOGY_DESC: "Il n'est possible d'accorder de prêts-bails qu'aux pays partageant la même idéologie."
  RULE_ALLOW_LEND_LEASE_SAME_FACTION_DESC: "Il n'est possible d'accorder de prêts-bails qu'aux pays membres de la même faction."
  RULE_ALLOW_LEND_LEASE_BLOCKED_DESC: "Il n'est jamais possible d'accorder de prêts-bails à aucun autre pays."
+ CHI_AI_BEHAVIOR: "@CHI République Populaire de Chine"
