--- a/localisation/french/replace/replaced_from_vanilla_research_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_research_l_french.yml
@@ -1,6 +1,6 @@
-﻿l_french:
+﻿﻿l_french:
  infantry_weapons2: "Armes légères 1985"
- infantry_weapons2_desc:1 "Les armes légères représentent l'équipement utilisé par les escouades de fusiliers, tels que les fusils d'assaut, les fusils de précision, les fusils de sniper, les lance-grenades, les fusils sans recul, les mitrailleuses légères et les armures corporelles."
+ infantry_weapons2_desc: "Les armes légères représentent l'équipement utilisé par les escouades de fusiliers, tels que les fusils d'assaut, les fusils de précision, les fusils de sniper, les lance-grenades, les fusils sans recul, les mitrailleuses légères et les armures corporelles."
  support_folder: "Bataillons de soutien"
  armour_folder: "Véhicules"
  armour_folder_desc: "Véhicules blindés, chars et leurs variantes."
