--- a/localisation/french/replace/replaced_from_vanilla_triggers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_triggers_l_french.yml
@@ -1,4 +1,4 @@
-﻿l_french:
+﻿﻿l_french:
  TRIGGER_HAS_VOLUNTEERS_MORE_THAN:0 "Au moins $VALUE|H$ unités de forces d'intervention venues de $COUNTRY2|H$."
  TRIGGER_HAS_VOLUNTEERS_LESS_THAN:0 "Moins de $VALUE|H$ unités de forces d'intervention venues de $COUNTRY2|H$."
  TRIGGER_HAS_NOT_MILITARY_ACCESS_TO:0 "Ne dispose pas de bases militaires en $COUNTRY|H$."
