--- a/localisation/french/replace/replaced_from_vanilla_countries_cosmetic_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_countries_cosmetic_l_french.yml
@@ -1,11 +1,11 @@
-﻿l_french:
- #TAG conflict with Original HOI4#
+﻿﻿l_french:
  MAL_subject:0 "$OVERLORDADJ$ Mali"
  PAP_subject:0 "$OVERLORDADJ$ Papouasie Nouvelle Guinée"
  KHA_subject:0 "$OVERLORDADJ$ Pendjab"
- KBK_subject:0 "$OVERLORDADJ$ Circassie"
+ KBK_subject:0 "$OVERLORDADJ$ Kabardino-Balkaria"
  KAR_subject:0 "$OVERLORDADJ$ Karen"
  GLC_subject:0 "$OVERLORDADJ$ Great Lake"
  MAC_subject:0 "$OVERLORDADJ$ Macao"
  GNA_subject:0 "$OVERLORDADJ$ Libye"
  CAM_subject:0 "$OVERLORDADJ$ Cameroun"
+ SIK_subject:0 ""
