--- a/localisation/french/replace/replaced_from_vanilla_trade_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_trade_l_french.yml
@@ -1,4 +1,4 @@
-﻿l_french:
+﻿﻿l_french:
  TRADE_ALL_FACTORY_OUT_TITLE:0 "Toutes les industries pour le commerce"
  TRADE_ALL_FACTORY_OUT_DESC:0 "Voulez-vous vraiment que toutes les industries produisent des biens commerciaux ?\n\nVous ne pourrez plus construire le moindre bâtiment !"
  TRADEOFFER_FACTORIES_DESC_LABEL:0 "Achat: $VALUE|Y$\nCoût en industries civiles: $CIC|Y$"
