--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -1248,7 +1248,7 @@
  BSH_alga_desc: "这是一个用于技术生产本地化的地点，它具有特殊的法律地位。该地区的特殊地位为我们的居民提供了税收优惠和海关优惠，这些优惠在国家层面得到了保证。"
  BSH_tech: "发展科学、技术和教育"
  BSH_tech_desc: "我们将批准巴什科尔托斯坦共和国科学技术发展国家计划。"
- BSH_bashkiria_economic_growth: "巴什科尔托斯坦的经济和投资发展"
+ BSH_bashkiria_economic_growth: "经济与投资发展"
  BSH_bashkiria_economic_growth_desc: "我们将批准《巴什科尔托斯坦共和国经济和投资发展国家规划》。"
  BSH_bashkiria_small_business: "小型企业发展计划"
  BSH_bashkiria_small_business_desc: "《小型企业发展方案》旨在通过建立有效的支持机制，为巴什科尔托斯坦共和国中小企业的发展创造条件，增加中小企业对解决巴什科尔托斯坦共和国经济和社会问题的贡献。"
@@ -2016,3 +2016,28 @@
  subject_rus.59.a: "悲哀"
  KHM_export: "与§Y[KHM.GetNamewithFlag]§!合作"
  KHM_world_belarus: "伙伴关系：[BLR.GetNameWithFlag]"
+ SUB_trade_czech_tt: "我们将§Y获得§!与§Y[CZE.GetNamewithFlag]§!达成§Y贸易协议§!的机会。"
+ KHM_world_czech: "伙伴关系：[CZE.GetNameWithFlag]"
+ KHM_housings: "房地产开发投资"
+ KHM_housings_desc: "我们地区急需新住房。人口不断增长，我们无法为他们提供新住房，因此我们将向该地区拨款。"
+ KHM_knight: "科学与艺术骑士"
+ KHM_knight_desc: "俄罗斯自然科学院主席团授予汉特-曼西斯克自治区区长“科学与艺术骑士”荣誉称号和徽章。这一公共奖项是为了表彰他在自治区创造条件所做的工作，这些条件使文化和艺术机构能够加强物质基础，吸引人才到该地区，并使自治区居民能够接触到伟大的艺术。"
+ KHM_czech: "尤格拉 - 捷克"
+ KHM_czech_desc: "我们有兴趣与捷克共和国合作，因此我们准备在那里开设代表处。"
+ KHM_spirit_fire: "精神之火"
+ KHM_spirit_fire_desc: "第三届国际电影首映电影节“精神之火”将在乌格拉首府举行，由汉特-曼西斯克乌格拉自治区政府赞助。电影节将丰富人们的精神潜力，培养文化和对艺术的热爱。在此次活动期间，预计将在汉特-曼西斯克举行电影精英、国际明星、创作团队、导演、制片人、俄罗斯城市和外国电影观众的大会。"
+ KHM_reconst_eu: "来自欧洲银行的贷款"
+ KHM_reconst_eu_desc: "我们将签署苏尔古特市政府与公司经理的合作协议，以吸引欧洲复兴开发银行的贷款。贷款资金将用于住房和公共服务的发展。"
+ KHM_mts: "MTS网络的扩展"
+ KHM_mts_desc: "MTS运营商将在我区扩大网络结构。"
+ KHM_future: "未来的版图"
+ KHM_future_desc: "我们看到汉特-曼西斯克自治区才是真正的未来版图。投资者应该而且会从整个地区和整个大陆涌向这里。"
+ KHM_police: "削减警察开支"
+ KHM_police_desc: "我们正在优化尤格拉民兵组织结构。大部分管理人员正在减少。此外，首先是减少空缺职位。"
+ KHM_agri: "农业综合体投资"
+ KHM_agri_desc: "我们正在投资我们的农业综合体，我们地区的农业并非无望。"
+ KHM_new_road: "开辟新道路"
+ KHM_new_road_desc: "我们将资助开辟我们地区新的道路。"
+ KHM_agri_idea: "我们的农业产业"
+ KHM_decreased_police_idea: "减少警察行政人员"
+ scientist_knight: "科学与艺术骑士"
