--- a/localisation/simp_chinese/replace/replaced_from_vanilla_diplomacy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_diplomacy_l_simp_chinese.yml
@@ -49,8 +49,8 @@
  DIPLOMACY_LEND_LEASE_REASON_TARGET_AT_WAR:0 "只有@$TAG$$WHO|H$处于战争中时你才能向其提供军事援助。"
  DIPLOMACY_LEND_LEASE_REASON_PUPPET:0 "我们任何时候都可以向我们的傀儡国提供军事援助。"
  DIPLOMACY_LEND_LEASE_NO_EQUIPMENT_CATEGORY:0 "这个类别里没有可以用于军事援助的装备"
- LEND_LEASE_VEHICLES_BUTTON:0 "§运送装甲车辆§!"
- LEND_LEASE_INFANTRY_BUTTON:0 "§运送步兵和炮兵装备§!"
+ LEND_LEASE_VEHICLES_BUTTON:0 "§T运送装甲车辆§!"
+ LEND_LEASE_INFANTRY_BUTTON:0 "§T运送步兵和炮兵装备§!"
  LEND_LEASE_AIRCRAFT_BUTTON:0 "§T运送飞机§!"
  LEND_LEASE_NAVAL_BUTTON:0 "§T运送运输船§!"
  LEND_LEASE_CURRENT_HEADER:0 "当前军事援助："
