--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1224,6 +1224,16 @@
  KHM_propaganda_desc: "The old Soviet propaganda methods must be revived."
  KHM_salary: "Northern Allowance"
  KHM_salary_desc: "We will encourage people to work and come to us."
+ KHM_oil: "Strengthen Geological Exploration"
+ KHM_oil_desc: "We will continue to explore the bowels of our republic in search of resources."
+ KHM_zavods: "Construction of New Factories"
+ KHM_zavods_desc: "We must create new jobs!"
+ KHM_five_year_plan: "First Five Year Plan"
+ KHM_five_year_plan_desc: "The free economic models of the western states is no future for a socialist state. The return to planned economy, preferably in the form of classical Soviet-style Five Year Plans, will give the government unchecked influence on the previously unchecked economy."
+ KHM_nationalize_foreign_business: "Nationalize Foreign Business"
+ KHM_nationalize_foreign_business_desc: "Industrial plants owned by foreigners are always an economic security risk. With foreign countries threatening us with economic sanctions, it is always a threat that the industrial owners leave over night and take vital parts of their plants with them. To prevent that, we need to claim these industries for the state - even if it offends the foreign states."
+ KHM_authoritarian_control_over_economy: "Authoritarian Control Over The Economy"
+ KHM_authoritarian_control_over_economy_desc: "The economic sphere of our state was left to chance, but now we will bring it back under the control of a strong leader.."
  KHM_housing: "Housing Program"
  KHM_housing_desc: "We will actively invest in the construction of new housing."
  KHM_oligarch: "Fight Against The Oligarchy"
@@ -1234,6 +1244,8 @@
  KHM_one_party_desc: "We will not share our power with anyone."
  KHM_policies: "Party Policy"
  KHM_policies_desc: "The party's program is a course towards a new future."
+ KHM_power_to_the_workers: "Investing In The Working Class"
+ KHM_power_to_the_workers_desc: "We will focus on the working class, which will be the engine of growth of our economy.."
 
  KHM_z_battalion: "Ugra Battalion"
  KHM_z_battalion_desc: "We are ready to send volunteers to the war."
