--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2395,7 +2395,7 @@
  VICTORY_POINTS_6111: "Medan"
  VICTORY_POINTS_4652: "Pematangsiantar"
  VICTORY_POINTS_10522: "Padang Sidempuan"
- VICTORY_POINTS_7673: "Rantauprabat"
+ VICTORY_POINTS_7673: "Rantau prabat"
  VICTORY_POINTS_12126: "Gunungsitoli"
  VICTORY_POINTS_1428: "Tua Pejat"
  VICTORY_POINTS_10382: "Padang"
@@ -2457,7 +2457,7 @@
  VICTORY_POINTS_10153: "Manado"
  VICTORY_POINTS_12358: "Palu"
  VICTORY_POINTS_4564: "Kendari"
- VICTORY_POINTS_7311: "Gorgontalo"
+ VICTORY_POINTS_7311: "Gorontalo"
  VICTORY_POINTS_1589: "Parepare"
  VICTORY_POINTS_10222: "Baubau"
  VICTORY_POINTS_7598: "Mamuju"
@@ -2474,7 +2474,7 @@
  VICTORY_POINTS_1404: "Tarakan"
  VICTORY_POINTS_10178: "Sebamban"
  VICTORY_POINTS_1225: "Amuntai"
- VICTORY_POINTS_10325: "Tajung Selor"
+ VICTORY_POINTS_10325: "Tanjung Selor"
  VICTORY_POINTS_6332: "Kaliningrad"
  VICTORY_POINTS_3384: "Chernyakhovsk"
  VICTORY_POINTS_348: "Sovetsk"
@@ -3099,7 +3099,7 @@
  VICTORY_POINTS_1288: "Cabanatuan"
  VICTORY_POINTS_7351: "Olongapo"
  VICTORY_POINTS_12253: "Baguio"
- VICTORY_POINTS_10298: "Tuguegaro"
+ VICTORY_POINTS_10298: "Tuguegarao"
  VICTORY_POINTS_4368: "Vigan"
  VICTORY_POINTS_10265: "Manila"
  VICTORY_POINTS_1221: "Batangas"
@@ -3188,7 +3188,7 @@
  VICTORY_POINTS_1801: "Hastings"
  VICTORY_POINTS_4804: "Palmerston North"
  VICTORY_POINTS_12604: "New Plymouth"
- VICTORY_POINTS_12617: "Wanganui"
+ VICTORY_POINTS_12617: "Whanganui"
  VICTORY_POINTS_4748: "Gisborne"
  VICTORY_POINTS_2197: "Christchurch"
  VICTORY_POINTS_2211: "Dunedin"
@@ -4417,4 +4417,4 @@
  VICTORY_POINTS_9354: "Ndele"
  VICTORY_POINTS_14928: "Abaza"
  VICTORY_POINTS_14931: "Narsaq"
- VICTORY_POINTS_14932: "Sisimuit"
+ VICTORY_POINTS_14932: "Sisimiut"
