--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -811,7 +811,7 @@
  #Land Doctrines
  command_initative_tooltip: "§RYOU MAY ONLY SELECT ONE OF THE THREE TECHS§!"
  military_combat_focus_tt: "§RNATIONS MAY SELECT UP TO TWO MAIN DOCTRINE PATHS. SUPERPOWERS MAY SELECT UP TO THREE.§!"
- modifier_experience_gain_armor_Bat_combat_factor: "Tank Battaltion Combat Experience Gain"
+ modifier_experience_gain_armor_Bat_combat_factor: "Tank Battalion Combat Experience Gain"
  modifier_experience_gain_L_Inf_Bat_combat_factor: "Light Infantry Combat Experience Gain"
  modifier_experience_gain_Mot_Inf_Bat_combat_factor: "Motorized Infantry Combat Experience Gain"
  modifier_experience_gain_Mech_Inf_Bat_combat_factor: "Mechanized Infantry Combat Experience Gain"
