--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -831,37 +831,37 @@
  high_tech_doctrine: "High Technology Military"
  high_tech_doctrine_desc: "By concentrating our technological efforts on the cutting edge, we will advance past what other nations can deploy, and will have a significant advantage in the battlespace, both on the battlefield and in cyberwarface. \n\n§RThis doctrine will cost 100bn on unlock§!"
  digital_assisted_warfare: "Digitally Assisted Warfare"
- digital_assisted_warfare_desc: "Using modern computer systems, satilite communications, and data-sharing technology, our forces will be able to plan, communicate, and execute plans faster than our opponents. \n\n§RThis doctrine will cost 200bn on unlock§!"
+ digital_assisted_warfare_desc: "Using modern computer systems, satellite communications, and data-sharing technology, our forces will be able to plan, communicate, and execute plans faster than our opponents. \n\n§RThis doctrine will cost 200bn on unlock§!"
  cross_com_deployment: "CROSS-COM Systems"
  cross_com_deployment_desc: "With each soldier getting a data-linked HUD, linked to an eyepiece on their helmet, even our foot soldiers will have a complete understanding of their local battlespace. \n\n§RThis doctrine will cost 200bn on unlock§!"
  advanced_unit_drones: "Advanced Drone Systems"
- advanced_unit_drones_desc: "Drone systems, with semi-autonomous decision making, will be able to augement squad level awareness, combat capability, and enemy detection.\n\n§RThis doctrine will cost 300bn on unlock§!"
- WOPR: "WOPR"
+ advanced_unit_drones_desc: "Drone systems, with semi-autonomous decision making, will be able to augment squad level awareness, combat capability, and enemy detection.\n\n§RThis doctrine will cost 300bn on unlock§!"
+ WOPR: "War Operation Plan Response"
  WOPR_desc: "The time has come. War Operation Plan Response is now live, and directly responsible for the majority of our military planning and operations, to include all nuclear arms. With mankind removed from the loop, the risk of bad decision making or dangerous accidents is compeltely removed.\n\n§RThis doctrine will cost 5000bn on unlock.§!"
  blue_force_tracker: "Blue Force Tracker"
  blue_force_tracker_desc: "Utilizing advanced GPS systems, more portable computers, and enhanced electronic encryptions, our commanders can monitor the battlespace with real-time-data of friendly unit locations. \n\n §RThis doctrine will cost 100bn on unlock.§!"
  ai_assisted_planning: "AI Assisted Planning"
  ai_assisted_planning_desc: "Taking advantage of significant advances in AI systems, we will utilize their processing power to rapidly analyze intelligence, find weaknesses, and conduct combat operations. \n\n§RThis doctrine will cost 500bn on unlock§!"
  common_tech_doctrine: "Common Tech Doctrine"
- common_tech_doctrine_desc: "Instead of focusing on the development of futeristic, expensive technologies, we instead will focus our military efforts onto effectively implementing current technologies."
+ common_tech_doctrine_desc: "Instead of focusing on the development of futuristic, expensive technologies, we instead will focus our military efforts onto effectively implementing current technologies."
  off_the_shelf: "Off the Shelf Equipment"
  off_the_shelf_desc: "As a nation without access to large amounts of money or technology, we need to make do with what we have. Cell phones, computers, written letters, and more, all of these will allow us to fight and communicate, if utilized correctly."
  burner_phones: "Burner Phones"
  burner_phones_desc: "By utilizing burner phones, and limiting their usage to one or two times, we can better protect our communications, as rapidly changing phone numbers and different call locations will provide better communications security against hostile powers."
- encoded_messages: "Encoded Messagers"
+ encoded_messages: "Encoded Messages"
  encoded_messages_desc: "By using specific codes inside our communications, even in plain language, we will be able to conceal the real message, even if our communications are intercepted."
  vpn_usage: "VPN Use"
  vpn_usage_desc: "Utilizing VPNs will provide us better communications security, keeping our electronic communications secret, and our locations better hidden from casual observation."
  hand_delivered_messages: "Hand Delivered Messages"
  hand_delivered_messages_desc: "Using letter carriers and handwritten, hand delivered messages, our communications security will prevent anyone from being able to electronically intercept any of our communications."
- compartmentalized_comms: "Compartmentilzation of Communication"
+ compartmentalized_comms: "Compartmentalization of Communication"
  compartmentalized_comms_desc: "By keeping communications 'in the know' across all of our forces, we will prevent widespread compromise in the event that any single part of the network is compromised."
  modernized_tech: "Modernized Technology"
- modernized_tech_desc: "Using the best avaiable technology, we will be able to enhance our military capabilties across both conventional and unconventional battlespaces."
+ modernized_tech_desc: "Using the best available technology, we will be able to enhance our military capabilities across both conventional and unconventional battlespace."
  modern_gps: "Modern GNSS"
- modern_gps_desc: "By utilizing modern satillite systems, our forces will be able to precicesly navigate the battlefield, and will be capable of conducting precision strikes on enemy positions."
+ modern_gps_desc: "By utilizing modern satellite systems, our forces will be able to precisely navigate the battlefield, and will be capable of conducting precision strikes on enemy positions."
  satcom: "SATCOM Systems"
- satcom_desc: "With satillite communication systems, our forces will be able to communicate rapidly and securely across the globe, to plan and execute missions with minimal planning time required."
+ satcom_desc: "With satellite communication systems, our forces will be able to communicate rapidly and securely across the globe, to plan and execute missions with minimal planning time required."
  advanced_comm_encryption: "Advanced Communication Encryption"
  advanced_comm_encryption_desc: "By developing and using advanced Encryption systems, we will further secure out communication systems from enemy interception and decryption."
  long_range_transmitters: "Long Range Communciations"
