--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -867,29 +867,29 @@
  long_range_transmitters: "Long Range Communciations"
  long_range_transmitters_desc: "By building smaller and lighter long range communication systems, our forces on the battlefield will be able to communicate and coordinate over vast distances, without issue."
  burst_transmitter_systems: "Burst Transmission Systems"
- burst_transmitter_systems_desc: "Utilzing burst transmission systems, our forces will have better communications security, and be less vulnerable to radio triangulation efforts, making our forces harder to detect."
+ burst_transmitter_systems_desc: "Utilizing burst transmission systems, our forces will have better communications security, and be less vulnerable to radio triangulation efforts, making our forces harder to detect."
  SCHOOLS_LIMITED_TT: "§RYOU MAY ONLY FOUND UP TO 5 SCHOOLS§!"
- Military_Combat_Doctrine: "Military Warfighting Doctrines"
+ Military_Combat_Doctrine: "Military Warfighting Doctrine"
  Military_Combat_Doctrine_desc: "Military warfighting doctrines are the core of how a military operates. Combat theories, training doctrines, and military readiness as a whole are all determined by how we train and teach our soldiers and officers."
  centralized_command: "Centralized Command"
  centralized_command_desc: "With a central command to plan, prepare, and coordinate all of our operations, we will establish a well led, top down military."
  decentralized_command: "De-Centralized Command"
- decentralized_command_desc: "To prevent a single location from being a linchpin, and to prevent decapation strikes, we will spread our command structure across our units, dispersing our leadership."
+ decentralized_command_desc: "To prevent a single location from being a linchpin, and to prevent decapitation strikes, we will spread our command structure across our units, dispersing our leadership."
  insurgent_command: "Insurgent Command"
- insurgent_command_desc: "In order to fight an insurgency properly, our forces will break into cells, with minimal coordination or contact to maintain security."
- urban_insurgencies: "Urban Insurgent Operations"
+ insurgent_command_desc: "In order to fight as insurgency properly, our forces will break into cells, with minimal coordination or contact to maintain security."
+ urban_insurgencies: "Urban Insurgency Operations"
  urban_insurgencies_desc: "By conducting our operations in the cities, we will maintain presence and control inside the vital economic centers of our country, along with gaining the cover of the civilian population."
  asture_insurgencies: "Asteure Insurgent Operations"
  asture_insurgencies_desc: "By moving our insurgency operations into the worst terrain we can find, we can make it difficult to locate and track us, and force our opponents to follow us into places they will not be able to fight well in."
- ied_employment: "IED Employment"
+ ied_employment: "IED Deployment"
  ied_employment_desc: "By properly utilizing improvised explosive devices, we will be able to gain an edge against both enemy armored and infantry forces, at minimal risk to us."
  scavengers: "Scavengers"
  scavengers_desc: "Scrounging the battlefield, we will equip ourselves with the remnants that we find."
  ambush_operations: "Ambush Operations"
  ambush_operations_desc: "Striking from hidden locations and dug in positions will allow us to take the enemy by surprise."
- peaceful_civilian_coersion: "Peaceful Civilian Coersion"
+ peaceful_civilian_coersion: "Peaceful Civilian Coercion"
  peaceful_civilian_coersion_desc: "By working with the civilian population, and by gaining their support, we will be better supplied and equipped for our future enagements."
- violent_civilian_coersion: "Violent Civilian Coersion"
+ violent_civilian_coersion: "Violent Civilian Coercion"
  violent_civilian_coersion_desc: "Beatings, kidnappings, and more; violent actions will quickly garner us the support we need to further fight the invaders."
  hit_and_run_raids: "Hit and Run Raids"
  hit_and_run_raids_desc: "By striking quickly, then retreating, and repeating these actions, we can maximize our combat effectiveness."
