--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -909,7 +909,7 @@
  high_level_command_initiative: "High Level Command Initiative"
  high_level_command_initiative_desc: "High command is the only group that understands the overall picture, and because of that, are the only ones who should make strategic and tactical decisions."
  brigade_structure: "Brigade Combat Teams"
- brigade_structure_desc: "By building smaller, but mixed brigades, we can maximize the capabilites of our units."
+ brigade_structure_desc: "By building smaller, but mixed brigades, we can maximize the capabilities of our units."
  division_structure: "Division Organization"
  division_structure_desc: "By utilizing unified division structures, we can better concentrate and directed our combat arms units."
  infantry_formations: "Infantry Combat Teams"
