Changelog and Comoros typo fixes:

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -96,6 +96,7 @@ v1.10.0
   - Added clamps for the percent so it's kept within 0 and 1 where 1 is 100% so as to not avoid outerbounding
   - Fixed a number of bugs in focus trees related to planes
   - Removed generic MIOs from nations that should have their own MIOs
+  - Fixed the missing text icon for attack helicopter battalions
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
@@ -145,6 +146,7 @@ v1.10.0
   - Added quad-copter drones to MD
   - Removed internal weapons module and replaced with individual weapon pylons.
   - Added modifiers for income and cost from selling and buying on international market
+  - Added SigSauer to Switzerland
 
  Graphics:
   - Added the "Toofan MRAP" for Iran
@@ -164,6 +166,7 @@ v1.10.0
   - Made key text icons more legible
   - New ERI leaders and portraits
   - Added party icons to much of the Western African tags
+  - Additional french models
 
  Localization:
   - Added missing loc for tech categories research speed bonus
@@ -183,6 +186,7 @@ v1.10.0
   - Updated the event loc for the Senegalese/Ivory Coast civil war events
   - Re/Localised ETH and ERI political parties
   - Fixed typos in a number of the technology descriptions
+  - Fixed and improved the localization in parts of the Comorosian content
 
  Map:
   - Revamp Iran region
