New Cont. Focuses

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -147,6 +147,7 @@ v1.10.0
   - Removed internal weapons module and replaced with individual weapon pylons.
   - Added modifiers for income and cost from selling and buying on international market
   - Added SigSauer to Switzerland
+  - Added three new continuous focuses: Temporary Intelligence Agents, Nuclear Energy Investments, Encourage Foreign Investments
 
  Graphics:
   - Added the "Toofan MRAP" for Iran
