--- a/Changelog.txt
+++ b/Changelog.txt
@@ -99,8 +99,8 @@ v1.10.0
   - Fixed the missing text icon for attack helicopter battalions
 
  Content:
-  - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
-  - NEW REWORKED TREES: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark, Norway, France
+  - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America
+  - NEW REWORKED TREES: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark, Norway, France, United States of America
   - NEW TAGS: RYU, VOJ, CAB, LAG
   - The Union state of Russia and Belarus gives more national spirits during the annexation
   - Some decisions have been removed from the mechanics of the Russian subjects
