--- a/localisation/english/tactics_l_english.yml
+++ b/localisation/english/tactics_l_english.yml
@@ -14,7 +14,7 @@
  tactic_dedicated_emplacements: "Dedicated Emplacements"
  tactic_thunder_run: "Thunder Run"
  tactic_thunder_run_push: "Offensive Push"
- tactic_thunder_run_maneuver: "Agressive Maneuvering"
+ tactic_thunder_run_maneuver: "Aggressive Maneuvering"
  tactic_thunder_run_retreat: "Defensive Break"
  tactic_thunder_run_delay: "Delaying Actions"
  tactic_deep_battle_push: "Breakthrough Push"
