--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1199,15 +1199,15 @@ southern_soldier_desc: "This leader was born in a Southern state and tends to be
 midwest_soldier: "Great Laker"
 midwest_soldier_desc: "This leader was born in a Midwestern state and tends to be more loyal to their home. When push genuinely comes to shove though they may not stick with the Union in the end of it."
 texan_soldier: "Texan"
-texan_soldier_desc: "This leader was born in Texas. Their loyalty for the Union is questionable at best and should the opportunity arise they are likely to leave to their blossoming Yellow Rose."
-great_plains_soldier: "Great Plains Solider"
+texan_soldier_desc: "This leader was born in Texas. Their loyalty for the Union is questionable at best and should the opportunity arise they are likely to leave to their blooming Yellow Rose."
+great_plains_soldier: "Great Plains Soldier"
 great_plains_soldier_desc: "This leader was born in a Great Plains state and would fair their chances in the plains in the heart of the nation. If the worst was to come they'll likely not stick around."
 rocky_mountain_soldier: "Rocky Mountain Soldier"
 rocky_mountain_soldier_desc: "This leader was born in the Southern Rocky Mountain states. Being so far from home even when they are within their home nation instills a feeling of homesickness only raw militarism or maybe child support could only keep away."
 california_soldier: "Californian"
 california_soldier_desc: "If the Bear Republic were to be set loose, a continent or not, this leader would be homeward bound."
 cascadian_soldier: "Cascadian Soldier"
-cascadian_soldier_desc: "This leader was born in the Pacific Northwest. Practically the polar opposite of Washington DC the Cascadian movement while small would be a symbol for a new life."
+cascadian_soldier_desc: "This leader was born in the Pacific Northwest. Practically the polar opposite of Washington DC the Cascadia movement while small would be a symbol for a new life."
 puerto_rican_soldier: "Puerto Rican"
 puerto_rican_soldier_desc: "This leader was born in the territory of Puerto Rico. Though the island has existed within our nation for nearly a century at this point, many from the island are indifferent about being apart of the Union. They're loyalty is unknown at best."
 alaskan_soldier: "Alaskan"
