--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -3353,7 +3353,7 @@
  VICTORY_POINTS_6929: "Hagerstown"
  VICTORY_POINTS_6823: "Cumberland"
  VICTORY_POINTS_6892: "Salisbury"
- VICTORY_POINTS_11892: "Hughsville"
+ VICTORY_POINTS_11892: "Hughesville"
  VICTORY_POINTS_788: "Virginia Beach"
  VICTORY_POINTS_865: "Newport News"
  VICTORY_POINTS_3823: "Richmond"
