--- a/localisation/english/plane_designer_l_english.yml
+++ b/localisation/english/plane_designer_l_english.yml
@@ -260,7 +260,7 @@
  weap_drone_hand_grenade: "Drone Hand Grenade"
  weap_drone_hand_grenade_desc: "A hand grenade with a remote release system, designed to be dropped on targets via quadcopter drone systems."
  avionics_drone_quadcopter: "Quadcopter Drone Systems"
- avionics_drone_quadcopter_desc: "Your typical walmart drone, just being repurposed for more agressive means."
+ avionics_drone_quadcopter_desc: "Your typical walmart drone, just being repurposed for more aggressive means."
  #AIRFRAMES
  small_plane_airframe_1: "3rd Gen Light Fighter"
  small_plane_airframe_2: "4th Gen Light Fighter"
@@ -736,7 +736,7 @@
  weap_mp_light_hardpoint_4: "4th Generation Light Hardpoint"
  weap_mp_light_hardpoint_4_desc: "$weap_mp_light_hardpoint_1_desc$"
  weap_int_mp_light_hardpoint_2: "1st Gen Internal Light Hardpoint"
- weap_int_mp_light_hardpoint_2_desc: "Internal light hardpoints allow an aircraft to carry a mix of weapons on internal bays, increasing their stealth capability. These hardpoints are cheap and are meant to either equip light aircraft with some weapons, or to help supplement ordinance on other aircraft. Short Range Air-to-Air missiles, 250-500lb bombs, and rocket pods are the weapons equiped on these hardpoints.\n\n§GDesigner Hint: These hardpoints are meant to allow nations to build stealth aircraft with light weapons capabilties, perfect for nations building on a budget.§!\n\n§WUsing this as the primary weapon will create a§! §BMulti-Role Fighter§!\n\n§RWARNING: CV Multi-Role Fighters will only attack enemy ships during naval combat§!"
+ weap_int_mp_light_hardpoint_2_desc: "Internal light hardpoints allow an aircraft to carry a mix of weapons on internal bays, increasing their stealth capability. These hardpoints are cheap and are meant to either equip light aircraft with some weapons, or to help supplement ordinance on other aircraft. Short Range Air-to-Air missiles, 250-500lb bombs, and rocket pods are the weapons equiped on these hardpoints.\n\n§GDesigner Hint: These hardpoints are meant to allow nations to build stealth aircraft with light weapons capabilities, perfect for nations building on a budget.§!\n\n§WUsing this as the primary weapon will create a§! §BMulti-Role Fighter§!\n\n§RWARNING: CV Multi-Role Fighters will only attack enemy ships during naval combat§!"
  weap_int_mp_light_hardpoint_3: "2nd Gen Internal Light Hardpoint"
  weap_int_mp_light_hardpoint_3_desc: "$weap_int_mp_light_hardpoint_2_desc$"
  weap_int_mp_light_hardpoint_4: "3rd Gen Internal Light Hardpoint"
@@ -749,8 +749,8 @@
  weap_a2a_hardpoint_3_desc: "$weap_a2a_hardpoint_1_desc$"
  weap_a2a_hardpoint_4: "4th Generation A2A Hardpoint"
  weap_a2a_hardpoint_4_desc: "$weap_a2a_hardpoint_1_desc$"
-  weap_int_a2a_hardpoint_1: "1st Generation Internal A2A Hardpoint"
- weap_int_a2a_hardpoint_1_desc: "Internal Air-to-Air weapons offer better stealth characteristics, but at the expensive of less ordinance, potentinally with a less powerful warhead.\n\n§GDesigner Hint: Internal Air-to-Air hardpoints are primiarly designed for stealth air superiority aircraft. You will get radar advantage buffs, while also still getting some air attack, though it will be less than external hardpoints.§!\n\n§WUsing this as the primary weapon will create an§! §BAir Superiority Fighter§!\n\n§RWARNING: CV Air Superiority Fighters will only attack enemy aircraft during naval combat§!"
+ weap_int_a2a_hardpoint_1: "1st Generation Internal A2A Hardpoint"
+ weap_int_a2a_hardpoint_1_desc: "Internal Air-to-Air weapons offer better stealth characteristics, but at the expense of less ordinance, potentially with a less powerful warhead.\n\n§GDesigner Hint: Internal Air-to-Air hardpoints are primiarly designed for stealth air superiority aircraft. You will get radar advantage buffs, while also still getting some air attack, though it will be less than external hardpoints.§!\n\n§WUsing this as the primary weapon will create an§! §BAir Superiority Fighter§!\n\n§RWARNING: CV Air Superiority Fighters will only attack enemy aircraft during naval combat§!"
  weap_int_a2a_hardpoint_2: "2nd Generation Internal A2A Hardpoint"
  weap_int_a2a_hardpoint_2_desc: "$weap_int_a2a_hardpoint_1_desc$"
  weap_int_a2a_hardpoint_3: "3rd Generation Internal A2A Hardpoint"
